--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,7 +9,7 @@
 body {
   font-family: 'Manrope', sans-serif;
   font-size: 13px;
-  background-color: #6d7f97;
+  background-color: #f0f0f0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -40,11 +40,13 @@ body {
 .img-container img {
   width: 292px;
   height: 295px;
+  border-radius: 5px 0px 0px 5px;
 }
 
 /* img container ends */
 /* card info */
 .card-info {
+  border-radius: 0px 5px 5px 0px;
   background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -133,7 +135,7 @@ body {
   position: relative;
 }
 
-.card-info .card-info-bottom .right img {
+.card-info .card-info-bottom .right #share {
   position: absolute;
   width: 20px;
   height: 20px;
@@ -142,15 +144,59 @@ body {
 }
 
 /* card info bottom */
+#snackbar {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  top: -65px;
+  left: -95px;
+  min-width: 220px;
+  height: 40px;
+  background-color: #48556a;
+  border-radius: 5px;
+  padding: 16px;
+  bottom: 30px;
+  -webkit-box-shadow: 1px 1px 3px;
+          box-shadow: 1px 1px 3px;
+}
+
+#snackbar p {
+  color: #9eafc2;
+  letter-spacing: 5px;
+  font-size: 0.6rem;
+}
+
+#snackbar img {
+  height: 20px;
+  padding-left: 10px;
+}
+
+#snackbar .arrow {
+  background-color: #48556a;
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: 33px;
+  left: 48%;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
 /* card info ends */
 /* attribution */
 .attribution {
   margin: 5%;
-  color: oldlace;
+  color: black;
 }
 
 .attribution a {
-  color: white;
+  color: black;
   text-decoration: underline;
 }
 
@@ -163,6 +209,39 @@ body {
   }
   .card .img-container {
     margin-bottom: -4px;
+  }
+  #snackbar {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    top: 0px;
+    left: -235px;
+    min-width: 290px;
+    height: 61px;
+    background-color: #48556a;
+    border-radius: 0px 0px 5px 5px;
+    padding: 16px;
+    bottom: 30px;
+    -webkit-box-shadow: 1px 1px 3px;
+            box-shadow: 1px 1px 3px;
+  }
+  #snackbar p {
+    color: #9eafc2;
+    letter-spacing: 5px;
+    font-size: 0.6rem;
+  }
+  #snackbar img {
+    height: 20px;
+    padding-left: 10px;
+  }
+  #snackbar .arrow {
+    display: none;
   }
 }
 /*# sourceMappingURL=styles.css.map */
