--- a/assets/styles.css
+++ b/assets/styles.css
@@ -148,9 +148,7 @@ body {
 /* card info bottom */
 #snackbar {
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -218,9 +216,7 @@ body {
   }
   #snackbar {
     position: absolute;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: none;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
