--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -112,7 +112,7 @@ body {
 
 #snackbar {
 	position: absolute;
-	display: flex;
+	display: none;
 	align-items: center;
 	justify-content: space-around;
 	top: -70%;
@@ -173,7 +173,7 @@ body {
 	
 	#snackbar {
 		position: absolute;
-		display: flex;
+		display: none;
 		align-items: center;
 		justify-content: flex-start;
 		flex-basis:40%;
